--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,89 @@
 .main_div{
   padding: 100px;
-  width: 300px;
-  height: 300px;
+  width: 306px;
+  height: 306px;
 }
-.div2{
+#div2{
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
+  /*border-right: #ff0000;*/
+  /*border-top: #ff0000;*/
 }
-.div4{
+#div4{
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
+  /*border-left: #ff0000;*/
+  /*border-top: #ff0000;*/
 }
-.div6{
+#div6{
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
+  /*border-right: #ff0000;*/
+  /*border-top: #ff0000;*/
 }
-.div8{
+#div8{
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
+  /*border-bottom: #ff0000;*/
+  /*border-top: #ff0000;*/
 }
-.div1{
-  background: black;
+#div1{
+  /*background: black;*/
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
+  /*border-left: #ff0000;
+  border-top: #ff0000;*/
 }
-.div3{
-  background: black;
+#div3{
+  /*background: black;*/
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
+  /*border-right: #ff0000;
+  border-top: #ff0000;*/
 }
-.div5{
-  background: black;
+#div5{
+  /*background: black;*/
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
 }
-.div7{
-  background: black;
+#div7{
+  /*background: black;*/
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
+  /*border-left: #ff0000;
+  border-bottom: #ff0000;*/
 }
-.div9{
-  background: black;
+#div9{
+  /*background: black;*/
   width: 100px;
   height: 100px;
   float: left;
+  border-style: solid;
+  border-width: 1px;
+  /*border-right: #ff0000;
+  border-bottom: #ff0000;*/
 }
