--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
   /*border-right: #ff0000;*/
   /*border-top: #ff0000;*/
 }
@@ -18,6 +20,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
   /*border-left: #ff0000;*/
   /*border-top: #ff0000;*/
 }
@@ -27,6 +31,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
   /*border-right: #ff0000;*/
   /*border-top: #ff0000;*/
 }
@@ -36,6 +42,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
   /*border-bottom: #ff0000;*/
   /*border-top: #ff0000;*/
 }
@@ -46,6 +54,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
   /*border-left: #ff0000;
   border-top: #ff0000;*/
 }
@@ -56,6 +66,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
   /*border-right: #ff0000;
   border-top: #ff0000;*/
 }
@@ -66,6 +78,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
 }
 #div7{
   /*background: black;*/
@@ -74,6 +88,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
   /*border-left: #ff0000;
   border-bottom: #ff0000;*/
 }
@@ -84,6 +100,8 @@
   float: left;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+  font-size: 50px;
   /*border-right: #ff0000;
   border-bottom: #ff0000;*/
 }
